minecraft/youcube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youcube
spec:
  selector:
    app: youcube
  ports:
  - port: 5000
    targetPort: http
    name: http
