minecraft/youcube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: minion
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ingress-youcube
spec:
  ingressClassName: nginx
  rules:
    - host: metallb.fritz.box
      http:
        paths:
          - backend:
              service:
                name: youcube
                port:
                  name: http
            path: /youcube(/|$)(.*)
            pathType: ImplementationSpecific
